fixed the detail being too low...

--- a/src/com/sidebar-tv/tv.less
+++ b/src/com/sidebar-tv/tv.less
@@ -128,7 +128,6 @@
 	& > .-detail {
 		/*margin-bottom:0.5em;*/
 
-		margin-top: 1em;
 		line-height:1.25em;
 		height:2.5em;
 		overflow: hidden;
